# signet-protocol

./: .gitignore  CLAUDE.md  NOTES.txt  README.md  go.mod  go.sum  network_test.go
.claude/: settings.json
.claude-library/contexts/: project.md
circuits/: .gitignore
circuits/jwt_auth/: Nargo.toml
cmd/devnet-init/: main.go
cmd/harness/: client.go  correctness.go  env.go  main.go  perf.go  reshare.go  scale.go
cmd/testvector/: main.go
cmd/zkbench/: main.go
contracts/: foundry.toml
contracts/contracts/: SignetFactory.sol  SignetGroup.sol
contracts/script/: DeployFactory.s.sol
contracts/test/: FROSTVerifier.t.sol  SignetFactory.t.sol  SignetGroup.t.sol
devnet/: .gitignore  README.md  clean.sh  start.sh  stop.sh  zkbench.sh
docs/: DESIGN-BARRETENBERG-WASM-GO.md  DESIGN-IMPL.md  DESIGN-RESHARE-HARDENING.md  DESIGN-RESHARE.md  DESIGN-ZK-AUTH.md  KMS-INTEGRATION.md  LSS-SECURITY.md  PERFORMANCE-ANALYSIS.md  PRODUCTION-TODOS.md
kms-frost/: Cargo.toml
kms-frost/src/: main.rs  params.rs  service.rs  session.rs  storage.rs
lss/: keygen.go  reshare.go  sign.go  sign_ecdsa.go
network/: host.go  identity.go  loop.go  mux.go  session.go
node/: auth.go  chain.go  config.go  coord.go  keymanager.go  node.go  remote_keymanager.go  remote_keymanager_test.go  reshare.go  reshare_integration_test.go  sessions.go  zkverify.go  zkverify_test.go
proto/: keymanager.proto
specs/: FROST-RESHARE-SPEC.md  RESHARE-LIFECYCLE-SPEC.md  frost_reshare.qnt  reshare_lifecycle.qnt
test/pkce-demo/: README.md  (+2 more)
tss/: curve.go  keygen.go  reshare.go  sign.go  tss_test.go
(+9 files in other folders)
